# rust-real_time_communication

apiServer/: .env.example  Cargo.toml
apiServer/migrations/: 20250118172500_users.sql  20250118195302_channels.sql  20250118195342_membership.sql  20250121174106_message.sql
apiServer/src/: main.rs
apiServer/src/dbcalls/: check_user_exists.rs
apiServer/src/middlewares/: auth_middleware.rs
apiServer/src/models/: channel.rs  membership.rs  message.rs  mod.rs  user.rs
apiServer/src/responses/: general_error.rs  mod.rs  validation_errors.rs
apiServer/src/routes/: mod.rs
apiServer/src/routes/channel/: add_user_to_channel.rs  create_channel.rs  get_user_channels.rs  mod.rs
apiServer/src/routes/messages/: send_message.rs
apiServer/src/routes/test/: hello_response.rs  mod.rs  test_url_change.rs
apiServer/src/routes/user/: create_user.rs  current_user.rs  current_user_for_socket.rs  login_user.rs  mod.rs
apiServer/src/validators/: add_user_to_channel_type.rs  create_channel_type.rs  create_user_type.rs  get_my_channels.rs  get_socket_user_type.rs  message_type.rs  mod.rs
loadBalancer/: .env.example  go.mod  main.go
loadBalancer/algorithms/: connections.go  round_robin.go
websocketserver/: .env.example  Cargo.toml  message.txt
websocketserver/src/: main.rs
websocketserver/src/managers/: datatypes.rs  get_channels.rs  handle_websocket.rs  message_type_check.rs  mod.rs  subscribe_connection.rs  unsubscribe_connection.rs  validate_user.rs
