[package]
name = "websocketserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
tokio = { version = "1.43.0", features = ["full"] }
dotenvy = "0.15.7"
